@@ -6,6 +6,7 @@
 	Add opts.createRow parameter to appendDetailRows function.
 	Add opts.keys parameter to createDetailRow function.
 	Add opts.detailKeys parameter to appendDetailRows function.
+	Rename keys parameter of createHeaderRow function to values parameter.
 
 2017-12-28  larissa9839  <larissa9839@gmail.com>
 
